# proyecto-riesgos

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
App/: electron.cjs  package.json
App/src/: App.tsx  index.css  index.html
calificacion-cartera/: main.py  pyproject.toml
calificacion-cartera/models/: decision_tree_sin_libranza.joblib  lightgbm_con_libranza.joblib  lightgbm_con_libranza_nov_2025.joblib  lightgbm_sin_libranza.joblib  lightgbm_sin_libranza_nov_2025.joblib
calificacion-cartera/notebooks/: Comparación PE.ipynb  Estimador de PE.ipynb  app.py  estimador_calificacion_cartera.ipynb  estimador_perdida_esperada.ipynb  validacion_modelos.ipynb
calificacion-cartera/src/: Estimador_de_PE_desktop.py  app.py
data/data-06-2022/: INFORME ASOCIADOS_JUNIO_2022.xlsx  INFORME INDIVIDUAL DE APORTES_JUNIO_2022.xlsx  INFORME INDIVIDUAL DE LAS CAPTACIONES (MODIFICADO)_JUNIO_2022.xlsx
data/data-09-2025/: DETERIORO-SUPERSOLIDARIA_2025-09.xlsx  INFORME ASOCIADOS_SEPTIEMBRE_2025.xlsx  INFORME INDIVIDUAL DE APORTES_SEPTIEMBRE_2025.xlsx  INFORME INDIVIDUAL DE CARTERA DE CREDITO (MODIFICADO)_ABRIL_2025.xlsx  INFORME INDIVIDUAL DE CARTERA DE CREDITO (MODIFICADO)_AGOSTO_2025.xlsx  INFORME INDIVIDUAL DE CARTERA DE CREDITO (MODIFICADO)_ENERO_2025.xlsx  INFORME INDIVIDUAL DE CARTERA DE CREDITO (MODIFICADO)_FEBRERO_2025.xlsx  INFORME INDIVIDUAL DE CARTERA DE CREDITO (MODIFICADO)_JULIO_2025.xlsx  INFORME INDIVIDUAL DE CARTERA DE CREDITO (MODIFICADO)_MARZO_2025.xlsx  INFORME INDIVIDUAL DE CARTERA DE CREDITO (MODIFICADO)_NOVIEMBRE_2024.xlsx  INFORME INDIVIDUAL DE LAS CAPTACIONES (MODIFICADO)_SEPTIEMBRE_2025.xlsx  PE_con_libranza.csv  PE_sin_libranza.csv  cleaned_data_default.parquet  data_default_clean.parquet  df_con_libranza_calificaciones_septiembre_2025.csv  df_sin_libranza_calificaciones_septiembre_2025.csv  merged_df.csv
default/: pyproject.toml
default/models/: best_pipe_hist.joblib  best_pipe_lgb.joblib  best_pipe_lrc.joblib  best_pipe_lrc_bal.joblib  best_pipe_mlp.joblib  best_pipe_xgb.joblib  cat_model.joblib  cat_params.json  (+21 more)
(+32 files in other folders)
