[project]
name = "proyecto-riesgos"
version = "0.1.0"
description = "Repositorio de proyectos de riesgos"
readme = "README.md"
requires-python = "==3.12.12"
dependencies = [
    "ipykernel>=7.1.0",
    "lightgbm>=4.6.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
    "shap>=0.50.0",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "calificacion-cartera",
    "default",
]
