[project]
name = "proyecto-riesgos"
version = "0.1.0"
description = "Repositorio de proyectos de riesgos"
readme = "README.md"
requires-python = "==3.12.12"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "openpyxl>=3.1.5",
    "pandas==2.3",
    "pyarrow>=23.0.1",
    "scikit-learn==1.7.2",
    "seaborn>=0.13.2",
    "shap>=0.50.0",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "calificacion-cartera",
    "default",
]
