[project]
name = "proyecto-riesgos"
version = "0.1.0"
description = "Repositorio de proyectos de riesgos"
readme = "README.md"
requires-python = "==3.12.12"
dependencies = [
    "imblearn>=0.0",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "openpyxl>=3.1.5",
    "pandas==2.3",
    "pre-commit>=4.5.1",
    "pyarrow>=23.0.1",
    "ruff>=0.15.2",
    "scikit-learn==1.7.2",
    "seaborn>=0.13.2",
    "shap>=0.50.0",
    "skrub>=0.7.1",
    "xgboost>=3.2.0",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "calificacion-cartera",
    "default",
]

[tool.ruff]
line-length = 88
# "E" (Errores de estilo), "F" (Errores de Pyflakes), "I" (Orden de imports)
select = ["E", "F", "I"]
# Ignorar advertencias comunes en notebooks como variables no usadas en celdas de prueba
ignore = ["F841"]

[tool.ruff.lint]
# Esto le dice a Ruff que limpie las importaciones no usadas automáticamente
fixable = ["F401", "I001"]

[tool.ruff.lint.isort]
known-third-party = ["pandas", "numpy", "sklearn", "matplotlib"]
